fixed safari div collapsing issue

--- a/src/views/VizRisk/Rajapur/RightPaneContents/RightPane1/styles.scss
+++ b/src/views/VizRisk/Rajapur/RightPaneContents/RightPane1/styles.scss
@@ -1,7 +1,6 @@
 
     .vrSideBar{
         position: absolute;
-        display: flex;
         flex-direction: column;
         background-color:#112330;
         min-width: 300px;
